# xitomatl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  render_images.py  svg_to_png.py  update_version.sh  xitomatl.ini
.github/: dependabot.yml
.github/workflows/: package.yml
resources/: xitomatl.qml
tests/: test_pomodoro.py  test_xitomatl.py
xitomatl/: __main__.py  animation.py  app.py  cli.py  config.py  icon.py  log.py  pomodoro.py  state.py  tasks.py
