[tool.poetry]
name = "xitomatl"
version = "0.1.0"
description = "Simple pomodoro timer app residing in tray"
license = "GPL-2.0-or-later"
authors = ["Lukas Holecek <hluk@email.cz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
PySide6-Essentials = "^6.8.2"

[tool.poetry.dev-dependencies]
Nuitka = "^2.6.2"
zstandard = "^0.23.0"
imageio = [
  {version = "^2.22.4", markers = "platform_system != 'Linux'"}
]
pillow = "^11.0.0"
pylint = "^3.3.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
xitomatl = "xitomatl.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
ignore-paths = [
    "^tests/",
]
jobs=0

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-name-in-module",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-return-statements",
    "wrong-import-position",
]
