[project]
name = "xitomatl"
version = "0.1.0"
description = "Simple pomodoro timer app residing in tray"
license = {text = "GPL-2.0-or-later"}
authors = [{name = "Lukas Holecek", email = "hluk@email.cz"}]
requires-python = ">=3.10,<3.14"
dependencies = [
    "PySide6-Essentials>=6.9.3,<7",
    "Nuitka>=2.6.9,<3",
    "zstandard>=0.25.0,<1",
    "imageio>=2.22.4,<3; platform_system != 'Linux'",
    "pillow>=11.3.0,<12",
]

[project.scripts]
xitomatl = "xitomatl.__main__:main"

[dependency-groups]
dev = [
    "pylint>=3.3.8,<5",
    "pytest>=8.4.2,<9",
    "pytest-cov>=6.2.1,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.main]
ignore-paths = [
    "^tests/",
]
jobs=0

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-name-in-module",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-return-statements",
    "wrong-import-position",
]
